--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,7 @@ jobs:
     strategy:
       matrix:
         include: [
-            { name: Chrome++_x86, arch: x86 },
-            { name: Chrome++_x64, arch: x64 },
-            { name: Chrome++_arm64, arch: arm64 }
+            { name: Chrome++_x64, arch: x64 }
         ]
 
     name: ${{ matrix.name }}
